--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
 <h1>this is my website</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur deserunt fugit aspernatur tenetur temporibus tempora dolorum alias veritatis, esse nesciunt! Fugiat corporis saepe libero, perferendis dolorem esse perspiciatis corrupti itaque!
+    
+</p>
     
 </body>
 
