third work done

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<h1>this is my website</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur deserunt fugit aspernatur tenetur temporibus tempora dolorum alias veritatis, esse nesciunt! Fugiat corporis saepe libero, perferendis dolorem esse perspiciatis corrupti itaque!
-    
-</p>
+    <center>
+<h1 style="font-size: xx-large;">MARU DRY FRUITS </h1>
+<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, quas. Explicabo cum molestiae, earum exercitationem nisi a incidunt illum assumenda tenetur. Magni, atque cum! Voluptatibus fugit quidem totam nisi recusandae.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis accusamus nam officiis. Minus, adipisci totam iure quia nesciunt sequi nihil perspiciatis recusandae assumenda facilis, vitae veritatis quam aliquid officiis esse.
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi iste explicabo nisi exercitationem earum, voluptate laborum repellendus nulla tenetur voluptas, enim molestiae similique iure vel veritatis minus eos facere cumque.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur deserunt fugit aspernatur tenetur temporibus tempora dolorum alias veritatis, esse nesciunt! Fugiat corporis saepe libero, perferendis dolorem esse perspiciatis corrupti itaque!
+   <br><br>
+    <button >DONEE BUTTON </button></center>
+<img style="width: 500px;" src="https://bmw.scene7.com/is/image/BMW/g60-bev-tech-data-stage-ext-3-4-front-1?wid=3000&hei=3000" alt="">
     
 </body>
 
