--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
    <br><br>
     <button >DONEE BUTTON </button></center>
 <img style="width: 500px;" src="https://bmw.scene7.com/is/image/BMW/g60-bev-tech-data-stage-ext-3-4-front-1?wid=3000&hei=3000" alt="">
-    
+    <h2>Shaban is a name of Arabic origin, often given to boys. It is derived from the Arabic word for "the month of Shaban," which is the eighth month of the Islamic lunar calendar. Shaban is considered a month of preparation for Ramadan, the holy month of fasting. The name symbolizes growth and spirituality, often associated with kindness and community.
+
+        In various cultures, individuals named Shaban are known for their compassion and dedication to their families and friends. The name carries a rich cultural significance and reflects a deep connection to Islamic traditions.
+        
+         </h2>
 </body>
 
 </html>
